# sandbox

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.airgapped  LICENSE  Makefile  README.md  SANDBOX_FRONTEND_AUTH.md  SECURITY.md  SQL_PAD_QUICKSTART.md  TESTING_SQL_PAD.md  docker-compose.airgapped.yaml  docker-compose.cloud-network.yaml  docker-compose.dev.yaml  docker-compose.hybrid.yaml  docker-compose.ui.yaml  nginx-ui.conf  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish-docker.yml  publish-npm.yml  publish-pypi.yml
config/: sandbox.example.yaml
docs/: SQL_PAD_INTEGRATION.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/architecture/: ArchitecturePage.tsx
frontend/src/components/auth/: LoginPage.tsx  ProtectedRoute.tsx
frontend/src/components/connections/: ConnectionForm.tsx  ConnectionFormModal.tsx  ConnectionsPage.backup.tsx  ConnectionsPage.tsx  DataSourceSelector.tsx  TableColumnSelector.tsx
frontend/src/components/database/: DatabaseExplorer.tsx  DatabaseExplorerPage.tsx
frontend/src/components/dataset/: DatasetPage.tsx  TableView.tsx
frontend/src/components/embed/: EmbedLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts  useSandboxApiAdapter.ts  useTranslation.ts
frontend/src/i18n/: config.ts
frontend/src/i18n/locales/: en.json
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  sandboxApiAdapter.ts
sdks/python/: README.md  pyproject.toml
sdks/python/src/meridyen_sandbox_client/: __init__.py  client.py  exceptions.py  models.py
sdks/react/: meridyen-sandbox-ui-0.1.0.tgz  package.json  tsconfig.json  tsup.config.ts
sdks/react/src/: index.ts  types.ts
sdks/react/src/components/: ConnectionForm.tsx  ConnectionsPage.tsx  DataSourceSelector.tsx  DatabaseExplorer.tsx  TableColumnSelector.tsx
sdks/react/src/context/: SandboxUIContext.ts  SandboxUIProvider.tsx  types.ts
sdks/react/src/i18n/: defaultTranslations.ts
sdks/react/src/icons/: handlerIconMap.ts
sdks/react/src/tailwind/: preset.js
sdks/typescript/: README.md  package.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  types.ts
src/sandbox/: __init__.py  main.py
src/sandbox/auth/: __init__.py  base.py  providers.py  sandbox_auth.py
src/sandbox/connectors/: __init__.py  base.py  factory.py  mysql.py  postgresql.py
src/sandbox/core/: __init__.py  config.py  exceptions.py  logging.py
src/sandbox/execution/: __init__.py  base.py  python_executor.py  sql_executor.py
src/sandbox/handlers/: __init__.py
src/sandbox/handlers/athena_handler/: __init__.py  athena_handler.py
src/sandbox/handlers/aurora_mysql_handler/: __init__.py  aurora_mysql_handler.py
src/sandbox/handlers/aurora_postgres_handler/: __init__.py  aurora_postgres_handler.py
src/sandbox/handlers/azure_synapse_handler/: __init__.py  azure_synapse_handler.py
src/sandbox/handlers/bigquery_handler/: __init__.py  bigquery_handler.py
src/sandbox/handlers/databricks_handler/: __init__.py  databricks_handler.py
src/sandbox/handlers/mysql_handler/: __init__.py  mysql_handler.py
src/sandbox/handlers/oracle_handler/: __init__.py  oracle_handler.py
src/sandbox/handlers/postgres_handler/: __init__.py  postgres_handler.py
src/sandbox/handlers/rds_mysql_handler/: __init__.py  rds_mysql_handler.py
src/sandbox/handlers/rds_postgres_handler/: __init__.py  rds_postgres_handler.py
src/sandbox/handlers/redshift_handler/: __init__.py  redshift_handler.py
src/sandbox/handlers/sap_hana_handler/: __init__.py  sap_hana_handler.py
src/sandbox/handlers/snowflake_handler/: __init__.py  snowflake_handler.py
src/sandbox/handlers/sqlserver_handler/: __init__.py  sqlserver_handler.py
src/sandbox/handlers/trino_handler/: __init__.py  trino_handler.py
src/sandbox/proto/: sandbox.proto
src/sandbox/services/: __init__.py  db_handler_service.py  file_loader.py  grpc_server.py  registration.py  rest_api.py  sqlpad_service.py
src/sandbox/visualization/: __init__.py  generator.py
