[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridyen-sandbox"
version = "1.0.0"
description = "Secure execution sandbox for Meridyen.ai platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Meridyen.ai", email = "engineering@meridyen.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # gRPC for secure communication
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-health-checking>=1.60.0",
    "grpcio-reflection>=1.60.0",

    # REST API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",

    # Database connectors (core)
    "psycopg[binary]>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "mysql-connector-python>=8.0.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",
    "pymssql>=2.2.0",
    "oracledb>=3.0.0",
    "hdbcli>=2.20.0",
    "clickhouse-driver>=0.2.0",
    "pyodbc>=5.0.0",
    "sqlalchemy>=2.0.0",

    # Cloud data platforms
    "snowflake-connector-python>=3.6.0",
    "google-cloud-bigquery>=3.14.0",
    "databricks-sql-connector>=3.0.0",

    # Query engines
    "trino>=0.330.0",
    "pyhive[presto]>=0.7.0",
    "boto3>=1.34.0",

    # File & other connectors
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "looker-sdk>=24.0.0",
    "teradatasql>=20.0.0",

    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",

    # Visualization
    "plotly>=5.18.0",

    # Security
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "RestrictedPython>=7.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",

    # Monitoring
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-grpc>=0.43b0",

    # Utilities
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
]

airgapped = [
    "ollama>=0.1.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
]

[project.scripts]
sandbox = "sandbox.main:main"
sandbox-worker = "sandbox.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # assert usage
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=sandbox --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]
