[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridyen-sandbox-client"
version = "0.9.0"
description = "Python client for Meridyen Sandbox execution engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Meridyen.ai", email = "engineering@meridyen.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["sandbox", "sql", "python", "code-execution", "secure", "meridyen"]

dependencies = [
    "httpx>=0.26.0",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]

[project.urls]
Homepage = "https://github.com/meridyen-ai/sandbox"
Repository = "https://github.com/meridyen-ai/sandbox"
Issues = "https://github.com/meridyen-ai/sandbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/meridyen_sandbox_client"]
